@@ -1,5 +1,10 @@
 2002-05-16  Jody Goldberg <jody@gnome.org>
 
+	* theme-switcher.c (install_dialog_response) : add some safety checks
+	  for invalid files.
+
+2002-05-16  Jody Goldberg <jody@gnome.org>
+
 	* theme-switcher.c (cb_dialog_response) : fix path.
 	(install_dialog_response) : add help link.
 
